--- a/hello-jni/app/build.gradle
+++ b/hello-jni/app/build.gradle
@@ -26,12 +26,16 @@ model {
                         srcDir "src/main/jni"
                     }
                 }
-            }b
+            }
         }
         buildTypes {
             release {
                 minifyEnabled = false
                 proguardFiles.add(file('proguard-rules.txt'))
+
+                ndk {
+                    debuggable true
+                }
             }
         }
         productFlavors {
